@@ -55,6 +55,7 @@
         Ervin Kolenovic,
         Krzysztof A. Ko&#347;ciuszkiewicz,
         Christian Kopf,
+        Stephan Lau,
         Jeffrey Kuhn,
         Uwe Kuehn,
         Alex Montgomery,
