@@ -11,6 +11,9 @@
     - Added buttons in External programs tab in Preferences for modifying settings for
       "Push to"-features, and removed obsolete fields.
     - Added support for DOI field in Endnote importer.
+    - Improved handling of invalid BibTeX keys containing white space. Parser will now try to
+      piece together the key and avoid disturbing the continued parsing. Patch submitted by
+      Stephan Lau.
     - Cosmetic change to the entry type label to the left in the entry editor.
     - Changed name handling so a single-entry name without a capital initial letter, such as
       "unknown", will be treated as a solitary last name rather than a von particle.
